--- a/pages/main.html
+++ b/pages/main.html
@@ -52,11 +52,20 @@
     }
     /* Add scrollbar for course details */
     #courseDetails {
+      display: none;
       max-height: 500px; /* Adjust as needed */
       overflow-y: auto;
       border: 1px solid #ddd;
       padding: 10px;
     }
+    #courseDetails {
+  display: none;
+  border: 1px solid #ddd;
+  padding: 10px;
+  max-height: 500px; /* 調整大小 */
+  overflow-y: auto;
+}
+
   </style>
 </head>
 <body>
@@ -121,7 +130,7 @@
             <option value="">Choose a title</option>
           </select>
         </div>
-        <div id="courseDetails"></div>
+        <div id="courseDetails" style="display: none;"></div>
       </div>
     </div>
   </div>
@@ -156,12 +165,13 @@
     document.getElementById('titleSelect').addEventListener('change', function() {
       const selectedTitle = this.value;
       const courseDetailsContainer = document.getElementById('courseDetails');
-      courseDetailsContainer.innerHTML = ''; // Clear previous details
 
       if (selectedTitle) {
+        courseDetailsContainer.style.display = 'block';
         fetch('../database/courses.json')
           .then(response => response.json())
           .then(courses => {
+            courseDetailsContainer.innerHTML = ''; // 清除之前的內容
             const relatedCourses = courses.filter(course => course.title === selectedTitle);
             if (relatedCourses.length > 0) {
               relatedCourses.forEach(course => {
@@ -185,6 +195,9 @@
             }
           })
           .catch(error => console.error('Error fetching courses:', error));
+      } else {
+        courseDetailsContainer.style.display = 'none';
+        courseDetailsContainer.innerHTML = ''; // 清除之前的內容
       }
     });
 
