--- a/pages/main.html
+++ b/pages/main.html
@@ -3,151 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main Page</title>
+  <title>Course Information</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .content {
-      display: flex;
-    }
-    .content-main {
-      flex: 2;
-    }
-    .content-sidebar {
-      width: 300px;
-      margin-left: 20px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
-    th, td {
-      border: 1px solid #dddddd;
-      text-align: center;
-      padding: 8px;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    .draggable {
-      cursor: grab;
-    }
-    .dropzone {
-      min-height: 50px;
-      background-color: #f8f9fa;
-      border: 2px dashed #ced4da;
-    }
-    #addRowBtn {
-      cursor: pointer;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto;
-    }
-    /* Add scrollbar for course details */
-    #courseDetails {
-      display: none;
-      max-height: 500px; /* Adjust as needed */
-      overflow-y: auto;
-      border: 1px solid #ddd;
-      padding: 10px;
-    }
-    #courseDetails {
-      display: none;
-      border: 1px solid #ddd;
-      padding: 10px;
-      max-height: 500px;
-      overflow-y: auto;
-    }
-
-  </style>
 </head>
 <body>
   <div id="menu-bar"></div>
 
-  <div class="container mt-4">
-    <h1>Main Page</h1>
-    <div class="content">
-      <div class="content-main">
-        <!-- Left side table for scheduling courses -->
-        <table id="scheduleTable">
-          <thead>
-            <tr>
-              <th>From</th>
-              <th>To</th>
-              <th>Topics</th>
-              <th>Content</th>
-              <th>Presenter</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <td>
-                <input type="text" id="fromTime1" value="09:00" class="form-control" title="From Time" placeholder="HH:MM" onkeypress="setTime(event)">
-              </td>
-              <td></td>
-              <td colspan="3"></td>
-            </tr>
-            <tr class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <td></td>
-              <td></td>
-              <td colspan="3"></td>
-            </tr>
-            <tr class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <td></td>
-              <td></td>
-              <td colspan="3"></td>
-            </tr>
-            <tr class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <td></td>
-              <td></td>
-              <td colspan="3"></td>
-            </tr>
-            <tr class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <td></td>
-              <td></td>
-              <td colspan="3"></td>
-            </tr>
-            <tr class="dropzone" ondrop="drop(event)" ondragover="allowDrop(event)">
-              <td></td>
-              <td></td>
-              <td colspan="3"></td>
-            </tr>
-          </tbody>
-        </table>
-        <div id="addRowBtn" onclick="addRow()">+</div>
-        
-        <!-- save button -->
-        <div id="saveButtonContainer">
-          <button id="saveButton" class="btn btn-success">Save</button>
-        </div>
-      </div>
-      <div class="content-sidebar">
-        <div class="form-group">
-          <label for="titleSelect">Select Title:</label>
-          <select id="titleSelect" class="form-control">
-            <option value="">Choose a title</option>
-          </select>
-        </div>
-        <div id="courseDetails" style="display: none;"></div>
-      </div>
-    </div>
-  </div>
-
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
-  <!-- excel file -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-
   <script>
     // JavaScript to dynamically load menu bar
     fetch('menu.html')
@@ -156,206 +20,6 @@
         document.getElementById('menu-bar').innerHTML = data;
       })
       .catch(error => console.error('Error loading menu:', error));
-
-    // Load titles from titles.json
-    fetch('../database/titles.json')
-      .then(response => response.json())
-      .then(titles => {
-        const titleSelect = document.getElementById('titleSelect');
-        titles.forEach(title => {
-          const option = document.createElement('option');
-          option.value = title;
-          option.text = title;
-          titleSelect.add(option);
-        });
-      })
-      .catch(error => console.error('Error fetching titles:', error));
-
-    // Handle title selection and show course details
-    document.getElementById('titleSelect').addEventListener('change', function() {
-      const selectedTitle = this.value;
-      const courseDetailsContainer = document.getElementById('courseDetails');
-
-      if (selectedTitle) {
-        courseDetailsContainer.style.display = 'block';
-        fetch('../database/courses.json')
-          .then(response => response.json())
-          .then(courses => {
-            courseDetailsContainer.innerHTML = ''; // 清除之前的內容
-            const relatedCourses = courses.filter(course => course.title === selectedTitle);
-            if (relatedCourses.length > 0) {
-              relatedCourses.forEach(course => {
-                const courseElement = document.createElement('div');
-                courseElement.classList.add('course-detail', 'draggable');
-                courseElement.draggable = true;
-                courseElement.dataset.course = JSON.stringify(course);
-
-                courseElement.innerHTML = `
-                  <h5>${course.title}</h5>
-                  <p><strong>Topic:</strong> ${course.topic}</p>
-                  <p><strong>Content:</strong> ${course.content}</p>
-                  <p><strong>Duration:</strong> ${course.duration} minutes</p>
-                  <p><strong>Presenters:</strong> ${course.presenter.join(', ')}</p>
-                `;
-
-                courseDetailsContainer.appendChild(courseElement);
-              });
-            } else {
-              courseDetailsContainer.innerHTML = '<p>No courses found for this title.</p>';
-            }
-          })
-          .catch(error => console.error('Error fetching courses:', error));
-      } else {
-        courseDetailsContainer.style.display = 'none';
-        courseDetailsContainer.innerHTML = ''; // 清除之前的內容
-      }
-    });
-
-    // Drag and Drop functions
-    function allowDrop(event) {
-      event.preventDefault();
-    }
-
-    function drag(event) {
-      event.dataTransfer.setData("text", event.target.dataset.course);
-    }
-
-    function drop(event) {
-      event.preventDefault();
-      const courseData = event.dataTransfer.getData("text");
-      if (courseData) {
-        const course = JSON.parse(courseData);
-        const dropzone = event.target.closest('.dropzone');
-        const fromTimeCell = dropzone.children[0];
-        const fromTime = fromTimeCell.querySelector('input') ? fromTimeCell.querySelector('input').value : fromTimeCell.innerText;
-        const fromTimeMinutes = convertTimeToMinutes(fromTime);
-        const toTimeMinutes = fromTimeMinutes + parseInt(course.duration);
-        const toTime = convertMinutesToTime(toTimeMinutes);
-
-        dropzone.innerHTML = `
-          <td>${fromTime}</td>
-          <td>${toTime}</td>
-          <td>${course.topic}</td>
-          <td>${course.content}</td>
-          <td>${course.presenter.join(', ')}</td>
-        `;
-
-        updateFollowingRows(dropzone, toTime);
-      }
-    }
-
-    function setTime(event) {
-      if (event.key === 'Enter') {
-        event.preventDefault();
-        const fromTimeInput = event.target;
-        const fromTime = fromTimeInput.value;
-        const dropzone = fromTimeInput.closest('.dropzone');
-        dropzone.children[0].innerHTML = fromTime;
-        fromTimeInput.remove();
-        updateFollowingRows(dropzone, fromTime);
-      }
-    }
-
-    function addRow() {
-      const tableBody = document.querySelector('#scheduleTable tbody');
-      const lastRow = tableBody.lastElementChild;
-      const newRow = document.createElement('tr');
-      newRow.classList.add('dropzone');
-      newRow.setAttribute('ondrop', 'drop(event)');
-      newRow.setAttribute('ondragover', 'allowDrop(event)');
-      newRow.innerHTML = `
-        <td></td>
-        <td></td>
-        <td colspan="3"></td>
-      `;
-      tableBody.insertBefore(newRow, lastRow.nextSibling);
-    }
-
-    function updateFollowingRows(startRow, startTime) {
-      let currentTime = startTime;
-      const rows = startRow.parentElement.children;
-      let index = Array.from(rows).indexOf(startRow) + 1;
-      while (index < rows.length) {
-        const row = rows[index];
-        if (row.classList.contains('dropzone')) {
-          const cells = row.children;
-          cells[0].innerText = currentTime;
-          cells[1].innerText = '';
-          index++;
-          currentTime = cells[1].innerText || currentTime;
-        } else {
-          break;
-        }
-      }
-    }
-
-    // Convert HH:MM to total minutes
-    function convertTimeToMinutes(time) {
-      const [hours, minutes] = time.split(':').map(Number);
-      return hours * 60 + minutes;
-    }
-
-    // Convert total minutes to HH:MM
-    function convertMinutesToTime(minutes) {
-      const hours = Math.floor(minutes / 60);
-      const mins = minutes % 60;
-      return `${String(hours).padStart(2, '0')}:${String(mins).padStart(2, '0')}`;
-    }
-
-    // Apply drag start listener to dynamically created course elements
-    document.addEventListener('dragstart', function(event) {
-      if (event.target.classList.contains('draggable')) {
-        drag(event);
-      }
-    });
-
-    document.getElementById('saveButton').addEventListener('click', function() {
-  const filename = prompt('Please enter the name of the file:', 'schedule');
-  if (!filename) return;
-
-  // 取得表格數據
-  const table = document.getElementById('scheduleTable');
-  const rows = table.querySelectorAll('tbody tr');
-
-  const data = Array.from(rows).map(row => {
-    const cells = row.querySelectorAll('td');
-    return {
-      from: cells[0].innerText,
-      to: cells[1].innerText,
-      topics: cells[2].innerText,
-      content: cells[3].innerText,
-      presenter: cells[4].innerText,
-    };
-  });
-
-  // 發送數據到伺服器保存 JSON 文件
-  fetch('http://localhost:3000/save-json', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({ filename, data }),
-  })
-  .then(response => response.text())
-  .then(result => {
-    console.log(result);
-  })
-  .catch(error => console.error('Error saving JSON file:', error));
-
-  // 發送數據到伺服器保存 Excel 文件
-  fetch('http://localhost:3000/save-excel', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({ filename, data }),
-  })
-  .then(response => response.text())
-  .then(result => {
-    console.log(result);
-  })
-  .catch(error => console.error('Error saving Excel file:', error));
-});
 
   </script>
 </body>
