--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,6 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="/pages/plan-course.html">Plan</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/all-courses.html">Courses</a>
         </li>
         <li class="nav-item">
