--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -154,6 +154,14 @@
       tableHTML += `</tbody></table>`;
       return tableHTML;
     }
+    // JavaScript to dynamically load menu bar
+    fetch('menu.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('menu-bar').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading menu:', error));
+
   </script>
 </body>
 </html>
